src/main/kotlin/com/example/backendsig/error/exception/BadRequestException.kt
package com.example.backendsig.error.exception

import java.lang.RuntimeException

class BadRequestException(message: String): RuntimeException(message)